2011-08-20  Robert Larice
 * src/maths/fft/Makefile.am ,
 * visualc/vngspice.vcproj :
   remove maths/fft/fftext.h

2011-08-19  Holger Vogt
 * rawfile.c: code beautified, 'strange line' error improved
 * maths/fft/fftext.h removed
 * include/fftext.h, 1-f-code.c, 1-f-code.h, com_fft.c:
   type float --> double
 * control.c: code beautified

2011-08-14  Robert Larice
 * src/frontend/postsc.c :
   postsc.c, swallow warnings

2011-08-14  Paolo Nenzi
 * src/frontend/devices.c :
   devhelp now prints header when user asks for a single
   parameter.

2011-08-13  Robert Larice
 * src/ciderlib/twod/twoprint.c :
   twoprint.c, swallow warnings

2011-08-13  Robert Larice
 * src/frontend/parse-bison.c ,
 * src/frontend/parse-bison.h ,
 * src/spicelib/parser/inpptree-parser.c ,
 * src/spicelib/parser/inpptree-parser.h :
   update bison generated files

2011-08-13  Robert Larice
 * src/frontend/parse-bison.y ,
 * src/spicelib/parser/inpptree-parser.y :
   bison files, swallow warnings

2011-08-12  Robert Larice
 * src/spicelib/devices/adms/admst/ngspice.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMakefile.am.xml :
   adms, fix parallel execution when using make -j

2011-08-12  Robert Larice
 * src/spicelib/devices/adms/admst/ngspiceMODULEask.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEguesstopology.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEload.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEmask.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEpar.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEpzld.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEtemp.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMakefile.am.xml :
   pull two -adms3 fixes into -adms
     2011-07-25
       convert K&R function definitions to ansi style
       and declare a debug function `static'
     2011-07-26
       swallow unsed variable warnings in adms generated code,
       upgrade dependencies

2011-08-12  Robert Larice