@@ -1,4 +1,8 @@
 2011-08-20  Robert Larice
+ * src/frontend/parse-bison.y :
+   the i() and v() function application have special semantics
+
+2011-08-20  Robert Larice
  * src/maths/fft/Makefile.am ,
  * visualc/vngspice.vcproj :
    remove maths/fft/fftext.h
